--- a/index.html
+++ b/index.html
@@ -234,48 +234,31 @@
     <footer>
       <div class="section__container footer__container">
         <div class="footer__col">
-          <h4>Resources</h4>
-          <ul class="footer__links">
-            <li><a href="#">Installation Manual</a></li>
-            <li><a href="#">Release Note</a></li>
-            <li><a href="#">Community Help</a></li>
-          </ul>
-        </div>
-        <div class="footer__col">
           <h4>Company</h4>
           <ul class="footer__links">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Career</a></li>
-            <li><a href="#">Press</a></li>
-            <li><a href="#">Support</a></li>
-          </ul>
-        </div>
-        <div class="footer__col">
-          <h4>Product</h4>
-          <ul class="footer__links">
-            <li><a href="#">Demo</a></li>
-            <li><a href="#">Security</a></li>
-            <li><a href="#">FAQ</a></li>
-            <li><a href="#">Features</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#rent">Rent</a></li>
+            <li><a href="#ride">Ride</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
         <div class="footer__col">
           <h4>Follow Us</h4>
           <ul class="footer__socials">
             <li>
-              <a href="#"><i class="ri-facebook-fill"></i></a>
+              <a href="https://www.facebook.com/sixt/"><i class="ri-facebook-fill"></i></a>
             </li>
             <li>
-              <a href="#"><i class="ri-twitter-fill"></i></a>
+              <a href="https://twitter.com/sixtrd?lang=es"><i class="ri-twitter-fill"></i></a>
             </li>
             <li>
-              <a href="#"><i class="ri-linkedin-fill"></i></a>
+              <a href="https://www.linkedin.com/company/sixt"><i class="ri-linkedin-fill"></i></a>
             </li>
           </ul>
         </div>
       </div>
       <div class="footer__bar">
-        Copyright © 2024 Web Design Mastery. All rights reserved.
+        Copyright © 2024 Wilmer Duran. All rights reserved.
       </div>
     </footer>
 
