--- a/index.html
+++ b/index.html
@@ -3,15 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" href="assets/sixt-icon.png" class="icon-page" type="image/x-icon">
     <title>Sixt</title>
   </head>
   <body>
@@ -32,7 +27,7 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
         <div class="nav__btn">
-          <button class="btn">Get Started</button>
+          <button class="btn"><a href="#ride">Empieza ahora</a></button>
         </div>
       </nav>
       <div class="header__container" id="home">
@@ -50,24 +45,18 @@
         <img src="assets/location.png" alt="location" />
       </div>
       <div class="location__content">
-        <h2 class="section__header">FIND CAR IN YOUR LOCATIONS</h2>
+        <h2 class="section__header">¿Aún no has oído hablar de nosotros?</h2>
         <p>
-          Discover the perfect vehicle tailored to your needs, wherever you are.
-          Our 'Find Car in Your Locations' feature allows you to effortlessly
-          search and select from our premium fleet available near you. Whether
-          you're looking for a luxury sedan, a spacious SUV, or a sporty
-          convertible, our easy-to-use tool ensures you find the ideal car for
-          your journey. Simply enter your location, and let us connect you with
-          top-tier vehicles ready for rental.
+          Somos una reconocida empresa global de alquiler de vehículos, especializada en la oferta de automóviles premium. Fundada en Alemania, se ha consolidado como una opción preferida para quienes buscan una experiencia de renta de autos de alta gama, con una flota que incluye marcas de lujo como BMW, Mercedes-Benz, y Audi. Además de su enfoque en vehículos de lujo, Sixt se distingue por su servicio al cliente de calidad, una amplia red de ubicaciones en aeropuertos y centros urbanos, así como opciones flexibles para satisfacer las necesidades de negocios y viajeros.
         </p>
         <div class="location__btn">
-          <button class="btn">Find a Location</button>
+          <button class="btn"><a href="#contact">Encuentra el tuyo!</a></button>
         </div>
       </div>
     </section>
 
     <section class="select__container" id="ride">
-      <h2 class="section__header">PICK YOUR DREAM CAR TODAY</h2>
+      <h2 class="section__header">¡Elige tu auto soñado hoy!</h2>
       <!-- Slider main container -->
       <div class="swiper">
         <!-- Additional required wrapper -->
@@ -81,46 +70,12 @@
           <div class="swiper-slide">
             <div class="select__card">
               <img src="assets/select-2.png" alt="select" />
-              <div class="select__info">
-                <div class="select__info__card">
-                  <span><i class="ri-speed-up-line"></i></span>
-                  <h4>215 <span>km/h</span></h4>
-                </div>
-                <div class="select__info__card">
-                  <span><i class="ri-settings-5-line"></i></span>
-                  <h4>6 <span>speed</span></h4>
-                </div>
-                <div class="select__info__card">
-                  <span><i class="ri-roadster-line"></i></span>
-                  <h4>5 <span>seats</span></h4>
-                </div>
-                <div class="select__info__card">
-                  <span><i class="ri-signpost-line"></i></span>
-                  <h4>16 <span>milage</span></h4>
-                </div>
-              </div>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="select__card">
               <img src="assets/select-3.png" alt="select" />
               <div class="select__info">
-                <div class="select__info__card">
-                  <span><i class="ri-speed-up-line"></i></span>
-                  <h4>306 <span>km/h</span></h4>
-                </div>
-                <div class="select__info__card">
-                  <span><i class="ri-settings-5-line"></i></span>
-                  <h4>6 <span>speed</span></h4>
-                </div>
-                <div class="select__info__card">
-                  <span><i class="ri-roadster-line"></i></span>
-                  <h4>5 <span>seats</span></h4>
-                </div>
-                <div class="select__info__card">
-                  <span><i class="ri-signpost-line"></i></span>
-                  <h4>12 <span>milage</span></h4>
-                </div>
               </div>
             </div>
           </div>
@@ -128,22 +83,6 @@
             <div class="select__card">
               <img src="assets/select-4.png" alt="select" />
               <div class="select__info">
-                <div class="select__info__card">
-                  <span><i class="ri-speed-up-line"></i></span>
-                  <h4>350 <span>km/h</span></h4>
-                </div>
-                <div class="select__info__card">
-                  <span><i class="ri-settings-5-line"></i></span>
-                  <h4>6 <span>speed</span></h4>
-                </div>
-                <div class="select__info__card">
-                  <span><i class="ri-roadster-line"></i></span>
-                  <h4>2 <span>seats</span></h4>
-                </div>
-                <div class="select__info__card">
-                  <span><i class="ri-signpost-line"></i></span>
-                  <h4>08 <span>milage</span></h4>
-                </div>
               </div>
             </div>
           </div>
@@ -151,22 +90,6 @@
             <div class="select__card">
               <img src="assets/select-5.png" alt="select" />
               <div class="select__info">
-                <div class="select__info__card">
-                  <span><i class="ri-speed-up-line"></i></span>
-                  <h4>254 <span>km/h</span></h4>
-                </div>
-                <div class="select__info__card">
-                  <span><i class="ri-settings-5-line"></i></span>
-                  <h4>6 <span>speed</span></h4>
-                </div>
-                <div class="select__info__card">
-                  <span><i class="ri-roadster-line"></i></span>
-                  <h4>5 <span>seats</span></h4>
-                </div>
-                <div class="select__info__card">
-                  <span><i class="ri-signpost-line"></i></span>
-                  <h4>10 <span>milage</span></h4>
-                </div>
               </div>
             </div>
           </div>
@@ -175,11 +98,11 @@
       <form action="/" class="select__form">
         <div class="select__price">
           <span><i class="ri-price-tag-3-line"></i></span>
-          <div><span id="select-price">225</span> /day</div>
+          <div><span id="select-price">225$</span> /dia</div>
         </div>
         <div class="select__btns">
-          <button class="btn">View Details</button>
-          <button class="btn">Rent Now</button>
+          <button class="btn">Más detalles</button>
+          <button class="btn">¡Alquila hoy mismo!</button>
         </div>
       </form>
     </section>
@@ -200,28 +123,9 @@
       </div>
     </section>
 
-    <section class="download">
-      <div class="section__container download__container">
-        <div class="download__content">
-          <h2 class="section__header">PREMIUM CAR RENTAL</h2>
-          <div class="download__links">
-            <a href="#">
-              <img src="assets/apple.png" alt="apple" />
-            </a>
-            <a href="#">
-              <img src="assets/google.png" alt="google" />
-            </a>
-          </div>
-        </div>
-        <div class="download__image">
-          <img src="assets/download.png" alt="download" />
-        </div>
-      </div>
-    </section>
-
     <section class="news" id="contact">
       <div class="section__container news__container">
-        <h2 class="section__header">Stay up to date on all the latest news.</h2>
+        <h2 class="section__header">Mantente al día con las últimas noticias.</h2>
         <form action="/">
           <input type="text" placeholder="Your email" />
           <button class="btn">
@@ -234,7 +138,7 @@
     <footer>
       <div class="section__container footer__container">
         <div class="footer__col">
-          <h4>Company</h4>
+          <h4>Inicio</h4>
           <ul class="footer__links">
             <li><a href="#home">Home</a></li>
             <li><a href="#rent">Rent</a></li>
@@ -243,7 +147,7 @@
           </ul>
         </div>
         <div class="footer__col">
-          <h4>Follow Us</h4>
+          <h4>¡Siguenos!</h4>
           <ul class="footer__socials">
             <li>
               <a href="https://www.facebook.com/sixt/"><i class="ri-facebook-fill"></i></a>
